 - Evolution: détection, alerte et proposition de changement ou de nettoyage quand un répertoire temporaire a déjà été utilisé
 - Evolution: les logs de MailExtract sont visibles dans la fenêtre d'import
 - Bug (corrigé): ajout par drag-and-drop dans un document vide
 - Evolution: suppression de la prise en compte du contexte d'exportation défini en ligne de commande

 [Evolutions de mailextract en 1.2.0-SNAPSHOT ayant un impact sur ReSIP]
 - Refacto: synchronisation de la version sedatools/mailextract
 - Evolution: prise en compte de l'évolution de la bibliothèque MailExtract (Changement de l'appel StoreExtractor)

============================================================================
Evolutions/Corrections en 1.1.0

- Evolution: mise à jour des bibliothèques java utilisées
- Evolution: ajout d'un jeu de caractéres d'encodage par défaut pour l'import de courriels (utilisé pour le décodage des pst)
[Evolution de mailextract correspondante en 0.9.2-SNAPSHOT]
- Evolution: les logs de MailExtract sont visibles dans la fenêtre d'import

============================================================================
Evolutions/Corrections -> 1.0

- Bug (corrigé): si l'extraction de métadonnées textuelles des courriels contient des caractères non standards dans le XML la constitution des paquets échoue...
- Bug (corrigé): le glissé/déposé sur Resip.bat d'un dossier ayant dans le chemin des caractères accentués ne fonctionne pas

ATTENTION: cette évolution invalide les extractions de messagerie déjà faites ou les SIP exportés sur disque
- Evolution: l'encodage de l'usage_version dans les noms de fichier sur disque a été modifié il est maintenant __usage(_version)__nomdefichier pour éviter les problèmes avec certains fichiers commencant par "nombre_". Cas rencontré sur le jeu de test Mercier.
[Evolution de mailextract correspondante en 0.9.2-SNAPSHOT]