@@ -6,6 +6,7 @@ Evolutions/Corrections en 1.2.0
  - Evolution: les logs de MailExtract sont visibles dans la fenêtre d'import
  - Bug (corrigé): ajout par drag-and-drop dans un document vide
  - Evolution: suppression de la prise en compte du contexte d'exportation défini en ligne de commande
+ - Evolution: ajout de la fonction Nettoyage de l'espace de travail
 
  [Evolutions de mailextract en 1.2.0-SNAPSHOT ayant un impact sur ReSIP]
  - Refacto: synchronisation de la version sedatools/mailextract
